--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,8 @@ body {
     border: solid var(--bgBorder) 1px;
     border-radius: 30px;
     display: flex;
+    flex-direction: column;
+    gap: 12px;
     justify-content: center;
     align-items: center;
 }
@@ -47,4 +49,88 @@ body {
     font-family: "Inter", serif;
     font-weight: 500;
     color: white;
+}
+
+.button {
+    all: unset;
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 9px;
+    gap: 5px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.05));
+    border-radius: 14px;
+    box-sizing: border-box;
+    border: solid var(--border) 1px;
+}
+
+.button-highlight {
+    all: unset;
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 9px;
+    gap: 5px;
+    background: linear-gradient(180deg, #77FFC2, #00FF8C);
+    -webkit-box-shadow: inset 0px -5px 4px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: inset 0px -5px 4px 0px rgba(0,0,0,0.25);
+    box-shadow: inset 0px -5px 4px 0px rgba(0,0,0,0.25);
+    border-radius: 14px;
+    box-sizing: border-box;
+    border: solid var(--border) 1px;
+}
+
+.button-text {
+    font-family: "Inter", serif;
+    font-weight: 600;
+    font-size: 20px;
+    color: transparent;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.5));
+    background-clip: text;
+}
+
+.button-text-highlight {
+    font-family: "Inter", serif;
+    font-weight: 600;
+    font-size: 20px;
+    color: transparent;
+    background: linear-gradient(180deg, #001D10, #006D3C);
+    background-clip: text;
+}
+
+.button-keybind {
+    font-family: "Inter", serif;
+    font-weight: 500;
+    font-size: 14px;
+    color: transparent;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.5));
+    background-clip: text;
+    opacity: 80%;
+    translate: 0px -2px;
+}
+
+.button-keybind-highlight {
+    font-family: "Inter", serif;
+    font-weight: 500;
+    font-size: 14px;
+    color: transparent;
+    background: linear-gradient(180deg, #001D10, #006D3C);
+    background-clip: text;
+    opacity: 80%;
+    translate: 0px -2px;
+}
+
+.button:hover {
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.1));
+}
+
+.tools-right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 13px;
 }
